# CurveVisualiser

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: Visualizer.h  matplotlibcpp.h
